--- a/Rush/Windows/ProcessWindow.xaml
+++ b/Rush/Windows/ProcessWindow.xaml
@@ -1,12 +1,36 @@
-﻿<Window x:Class="Rush.Windows.ProcessWindow"
+﻿<controls:MetroWindow x:Class="Rush.Windows.ProcessWindow" xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Rush.Windows"
+        xmlns:vc="clr-namespace:Rush.Converters"
         mc:Ignorable="d"
-        Title="ProcessWindow" Height="300" Width="300">
+        Title="Processing" Height="168" Width="719" Loaded="OnWindowLoaded" Icon="/Rush;component/logo.ico">
+    <Window.Resources>
+        <vc:ProgressToInfoConverter x:Key="ProgressToInfoConverter"></vc:ProgressToInfoConverter>
+    </Window.Resources>
     <Grid>
-        
+        <StackPanel Visibility="Visible" x:Name="ProgressStack" Margin="10,5,10,0">
+            <StackPanel Orientation="Horizontal">
+                <Label Name="TitleLabel" Content="TITLE" FontSize="18.667" FontWeight="Bold" FontFamily="Segoe UI Symbol" Height="34" Width="685"></Label>
+                <StackPanel Orientation="Horizontal"/>
+            </StackPanel>
+
+            <Label Name="MessageLabel" Height="35"></Label>
+            <StackPanel Orientation="Horizontal">
+                <controls:MetroProgressBar x:Name="ProgressBar" Value="50" Height="27" Margin="0,0,10,0" Width="561"/>
+                <Label Name="CountLabel" Width="119" Foreground="#FF008287">
+                    <Label.Content>
+                        <MultiBinding Converter="{StaticResource ProgressToInfoConverter}">
+                            <Binding ElementName="ProgressBar" Path="Maximum"></Binding>
+                            <Binding ElementName="ProgressBar" Path="Value"></Binding>
+                        </MultiBinding>
+                    </Label.Content>
+                </Label>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" FlowDirection="RightToLeft">
+                <Button Name="CancelButton" Style="{DynamicResource SquareButtonStyle}"  Content="Cancel" Width="47" Margin="10,0,0,0" Click="OnCancelButtonClick" ></Button>
+            </StackPanel>
+        </StackPanel>
     </Grid>
-</Window>
+</controls:MetroWindow>
