--- a/Rush/Windows/ProcessWindow.xaml
+++ b/Rush/Windows/ProcessWindow.xaml
@@ -5,20 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vc="clr-namespace:Rush.Converters"
         mc:Ignorable="d"
-        Title="Processing" Height="168" Width="719" Loaded="OnWindowLoaded" Icon="/Rush;component/logo.ico">
+        Title="Processing" Height="168" Width="719" Loaded="OnWindowLoaded" Icon="/Rush;component/logo.ico" ResizeMode="NoResize">
     <Window.Resources>
         <vc:ProgressToInfoConverter x:Key="ProgressToInfoConverter"></vc:ProgressToInfoConverter>
     </Window.Resources>
     <Grid>
         <StackPanel Visibility="Visible" x:Name="ProgressStack" Margin="10,5,10,0">
             <StackPanel Orientation="Horizontal">
-                <Label Name="TitleLabel" Content="TITLE" FontSize="18.667" FontWeight="Bold" FontFamily="Segoe UI Symbol" Height="34" Width="685"></Label>
+                <Label Name="TitleLabel" FontSize="18.667" FontWeight="Bold" FontFamily="Segoe UI Symbol" Height="34" Width="685"></Label>
                 <StackPanel Orientation="Horizontal"/>
             </StackPanel>
 
             <Label Name="MessageLabel" Height="35"></Label>
             <StackPanel Orientation="Horizontal">
-                <controls:MetroProgressBar x:Name="ProgressBar" Value="50" Height="27" Margin="0,0,10,0" Width="561"/>
+                <controls:MetroProgressBar x:Name="ProgressBar"  Height="27" Margin="0,0,10,0" Width="561"/>
                 <Label Name="CountLabel" Width="119" Foreground="#FF008287">
                     <Label.Content>
                         <MultiBinding Converter="{StaticResource ProgressToInfoConverter}">
