--- a/Rush/Windows/NewVersionWindow.xaml
+++ b/Rush/Windows/NewVersionWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Rush.Windows"
         mc:Ignorable="d"
-        Title="new version available" Height="306.767" Width="500.752" Loaded="OnWindowLoaded">
+        Title="new version available" Height="306.767" Width="509.978" Loaded="OnWindowLoaded" ResizeMode="NoResize">
     <StackPanel>
         <WebBrowser Height="225" Margin="0,10,0,0" VerticalAlignment="Top" Name="WebView"/>
         <StackPanel Margin="0,10,0,0" FlowDirection="RightToLeft" Orientation="Horizontal">
